Calculators working ...again